# cpp-practice

./: .gitignore
001_OpenGL_glfw_boilerplate/: build.nix64.sh  build.win64.ps1
001_OpenGL_glfw_boilerplate/src/: glad.c  main.c
002_gst_helloworld/: CMakeLists.txt  CMakeSettings.json
002_gst_helloworld/src/: main.c
004_Meyers11CopyAndAssign/: CMakeLists.txt
004_Meyers11CopyAndAssign/src/: main.cpp
004_Meyers11CopyAndAssign/src/meyers/: generalclass.h
005_CMake-HelloWorld-HelloCmake/: build.ps1  helloworld.cpp
006_Basic-transform-example/: CMakeLists.txt
006_Basic-transform-example/src/meyers/: basictransitionfromc.cpp  basictransitionfromc.h
007_OpenGL_glfw_plain_C_example/: .gitignore  CMakeLists.txt
008_wxWidgets_example/: .gitignore  CMakeLists.txt
008_wxWidgets_example/src/: main.cpp
009_Rusty/: .gitignore
009_Rusty/application/: Rusty.pro  consolewidget.cpp  consolewidget.h  dispatcher.cpp  dispatcher.h  licensewidget.cpp  licensewidget.h  mainwindow.cpp  mainwindow.h  projectconsolewidget.cpp  projectconsolewidget.h  projectinfowidget.cpp  projectinfowidget.h  projectmodel.cpp  projectmodel.h  projectwidget.cpp  projectwidget.h
009_Rusty/key_generator_js/: fast-spring-license.js  index.html
01-hello-cmake/: .astylerc  CMakeLists.txt  helloworld.cpp
011_gst_opencv/: .gitignore  CMakeLists.txt  CMakeSettings.json
011_gst_opencv/src/: main.cpp
01Meyers07NewExceptionHandling/: CMakeLists.txt
01Meyers07NewExceptionHandling/src/: main.cpp
01Meyers07NewExceptionHandling/src/meyers/: extensivememoryuser.cpp  newhandlersupport.cpp
CF_000_0A_General_Solution/: .astylerc
CF_000_0A_General_Solution/src/: main.cpp
CF_001_263A_Beautiful_Matrix/: CMakeLists.txt
CF_001_263A_Beautiful_Matrix/src/: main.cpp
CF_002_112A_Petya_and_Strings/: CMakeLists.txt
CF_002_112A_Petya_and_Strings/src/: main.cpp
CF_003_820A_Elevators/: CMakeLists.txt
CF_003_820A_Elevators/src/: main.cpp
CF_004_820B_Decode_Strings/: CMakeLists.txt
CF_004_820B_Decode_Strings/src/: main.cpp
CF_005_00_Median_Number/src/: main.cpp
CF_006_00_Atilla/src/: main.cpp
CS_001_Remove_k_from_list/: CMakeLists.txt
CS_001_Remove_k_from_list/src/: main.cpp
CS_002_is_list_a_palindrome/: CMakeLists.txt
CS_002_is_list_a_palindrome/src/: main.cpp
HR01_Sales_by_Match/src/: main.cpp
HR02_Counting_Valleys/src/: main.cpp
HR03_Jumping_on_the_Clouds/src/: main.cpp
HR04_Repeated_String/src/: main.cpp
HR05_2D_Array/src/: main.cpp
HR_01_HelloWorld/: CMakeLists.txt  HR_01_HelloWorld.kdev4  build.nix64.sh
HR_02_cpp_input_and_output/: CMakeLists.txt
HR_02_cpp_input_and_output/src/: main.cpp
HR_03_basic_data_types/: CMakeLists.txt
HR_03_basic_data_types/src/: main.cpp
HR_04_conditional_if_else/: .astylerc  CMakeLists.txt  build.win64.ps1
HR_04_conditional_if_else/src/: main.cpp  stdc++.h
HR_05_for_loop/: CMakeLists.txt  build.win64.ps1
HR_05_for_loop/src/: main.cpp
HR_06_functions/: .astylerc  CMakeLists.txt
HR_06_functions/src/: main.cpp
HR_07_pointer/: CMakeLists.txt
HR_07_pointer/src/: main.cpp
HR_08_arrays/: CMakeLists.txt
HR_08_arrays/src/: main.cpp
INT01_X_and_O_Letters/: CMakeLists.txt
INT01_X_and_O_Letters/src/: main.cpp
INT02_find_n_th_element_from_end/src/: main.cpp
VH01_Roman_Numbers/src/: main.cpp
VH02_Three_Pass_Compiler/src/: main.cpp
YA_000_General_VSCode_CMake/: .astylerc  CMakeLists.txt
YA_000_General_VSCode_CMake/src/: main.cpp
YA_001_01_Interesting_Matrix/: CMakeLists.txt
YA_001_01_Interesting_Matrix/src/: main.cpp
YA_003_03_Planner/src/: main.cpp
(+7 files in other folders)
